sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:13: error: ')' expected but '}' found.
  }
  ^AlgShellSort:16: error: Unmatched closing brace '}' ignored here
            }}
            ^